20210203@accumulate：迁移代码，梳理accumulate仓库。

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>thead</module>
+        <module>design-patterns</module>
+        <module>jvm</module>
+        <module>concurrency</module>
     </modules>
 
     <build>
