20210203@Introspector：基于Introspector做JavaBean转换器

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,16 @@
         <module>design-patterns</module>
         <module>jvm</module>
         <module>concurrency</module>
+        <module>low-code</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
