20210203@JavaBean转换：类比BeanUtils、ConvertUtils、PropertyUtils

--- a/low-code/pom.xml
+++ b/low-code/pom.xml
@@ -10,7 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>low-code</artifactId>
-    <dependencies>
-    </dependencies>
 
+    <dependencies>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+        </dependency>
+    </dependencies>
 </project>
