package-info.java使用说明@20210224：1.提供包的整体注释说明。2.为标注在包上Annotation提供便利。3.声明友好类和包常量(通常不使用)

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>jvm</module>
         <module>concurrency</module>
         <module>low-code</module>
+        <module>specification</module>
     </modules>
 
     <dependencies>
